change css weight to top menu... stop covering up admin items in drupal

--- a/sites/all/themes/portfolio/assets/css/main.css
+++ b/sites/all/themes/portfolio/assets/css/main.css
@@ -63,7 +63,7 @@ section {
 
 .header-nav-container {
 	position: fixed;
-	z-index: 999;
+	z-index: 99;
 	top: 0;
 	left: 0;
 	width: 100%;
